rm polyfills & hacks for non-evergreen browsers
Signed-off-by: Iván Sánchez Ortega <ivan@sanchezortega.es>

--- a/demos/index.html
+++ b/demos/index.html
@@ -30,7 +30,7 @@
 		<h1>Demos for the <samp>prosthetic-hand</samp> library</h1>
 		<main>
 			<h2>Compatibility disclaimer</h2>
-			<p>Demos showing off <samp>TouchEvent</samp> will only work in a <a href="https://caniuse.com/touch">browser that implements <samp>TouchEvent</samp></a>. Which means: don't use Safari for those.</p>
+			<p>Demos showing off <samp>TouchEvent</samp> will only work in a <a href="https://caniuse.com/touch">browser that implements <samp>TouchEvent</samp></a>. Which means: don't use Safari on MacOS for those (Safari on iOS should work fine).</p>
 			<h2>Demos</h2>
 			<ul>
 				<li><a href="map-pan.html">map-pan</a> &dash; move a map around</li>
