--- a/demos/map-timing.html
+++ b/demos/map-timing.html
@@ -16,11 +16,11 @@
 				background: rgb(240, 255, 240);
 			}
 		</style>
-		<link href="/node_modules/leaflet/dist/leaflet.css" rel="stylesheet">
+		<link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet">
 		<script type="importmap">
 			{
 				"imports": {
-					"leaflet": "/node_modules/leaflet/dist/leaflet-src.esm.js",
+					"leaflet": "https://unpkg.com/leaflet@1.9.3/dist/leaflet-src.esm.js",
 					"prosthetic-hand": "/lib/Hand.js"
 				}
 			}
